--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.10.2",
   "author": "Tim Hagn <mail@timhagn.com>",
   "dependencies": {
-    "gatsby": "^2.19.19",
+    "gatsby": "^2.19.49",
     "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-manifest": "^2.2.41",
@@ -34,9 +34,8 @@
   "scripts": {
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
+    "start": "gatsby develop",
     "serve": "gatsby serve -p9001",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
